Fixed overflow from starred ideas/save buttons

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 .sidenav {
   background-color: #1F1F3D;
   height: 100%;
-  width: 25vw;
+  width: 25%;
   position: fixed;
 }
 
@@ -30,13 +30,18 @@ body {
   justify-content: center;
 }
 .starred-ideas-btn {
+  text-align: center;
   background-color: #A8AAD2;
   color: #1F1F3C;
   border: none;
   font-size: 20px;
-  padding: 3%;
+  padding: 0px;
   height: 50px;
+  min-width: 80%; 
   font-weight: bold;
+  white-space: wrap;
+  overflow: hidden;
+  text-overflow: clip;
 }
 
 .starred-ideas-btn:disabled {
@@ -86,6 +91,9 @@ main {
   margin-left: 55px;
   margin-top: 10px;
   font-size: 25px;
+  white-space: wrap;
+  overflow: hidden;
+  text-overflow: clip;
 }
 
 .save-button:disabled {
